# esp32_meshtastic

./: CHANGELOG.md  CMakeLists.txt  README.md  REQUIREMENTS.md  idf_component.yml  sdkconfig.defaults
.claude/skills/run-esp32-meshtastic/: SKILL.md  smoke.sh
main/: CMakeLists.txt  config.h  main.c
main/analyzer/: cmd_task.c  events.h  logger_task.c  noise_task.c  rx_task.c  tx_task.c
main/bt/: bt_spp.c  bt_spp.h
main/display/: oled.c  oled.h
main/meshtastic/: channel_freq.c  channel_freq.h  crypto.c  crypto.h  packet.c  packet.h
main/meshtastic/proto/: portnums.h  proto_encode.c  proto_encode.h
main/sx1276/: sx1276.c  sx1276.h
web/: index.html
